# Verdant

./: .coveragerc  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.py
app/: Home.py
app/api/: __init__.py  main.py
app/api/models/: __init__.py  requests.py  responses.py
app/api/routes/: __init__.py  analysis.py  metadata.py
app/pages/: 1_Analysis.py  2_Map.py
cli/: __init__.py  main.py
docs/: README.md
docs/academic/: methodology.md  references.md  remote-sensing-fundamentals.md  spectral-indices.md
docs/architecture/: 01_OVERVIEW.md  02_CORE_MODULES.md  03_IO_MODULES.md  04_VIZ_MODULES.md  05_CONFIG_PIPELINE.md  06_CLI_APP.md  07_DATA_FLOW.md  08_API_REFERENCE.md  README.md
docs/contributing/: code-style.md  development.md
docs/deployment/: docker.md  local-development.md  production.md
docs/en/: EXECUTIVE_SUMMARY.md  TECHNICAL_GUIDE.md
docs/es/: GUIA_TECNICA.md  RESUMEN_EJECUTIVO.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: cli-guide.md  dashboard-guide.md  export-visualization.md  notebooks-guide.md
docs/technical/: api-reference.md  architecture.md
docs/tutorials/: 01-ndvi-analysis.md  02-change-detection.md  03-custom-aoi.md  04-api-integration.md
engine/: __init__.py  alphaearth.py  config.py  ee_init.py
engine/change/: __init__.py  detection.py  statistics.py  thresholds.py
engine/composites/: __init__.py  band_harmonization.py  cloud_masking.py  temporal.py
engine/indices/: __init__.py  base.py  burn.py  convenience.py  vegetation.py  water.py
engine/io/: __init__.py  cache.py  exporters.py
engine/io/aoi/: __init__.py  geometry.py  loaders.py
notebooks/: 001_intro_ndvi.ipynb  002_change_detection.ipynb
scripts/: docker-run.sh  sandbox.py
services/: __init__.py  change_orchestrator.py
tests/: conftest.py
tests/api/: __init__.py  test_endpoints.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_change.py  test_composites.py  test_config.py  test_indices.py  test_io.py
veg_change_engine/: __init__.py  config.py  ee_init.py  pipeline.py
veg_change_engine/core/: __init__.py  change.py  composites.py  indices.py
veg_change_engine/io/: __init__.py  aoi.py  cache.py  exporters.py
veg_change_engine/viz/: __init__.py  colors.py  maps.py
